<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="italic"
        android:text="Good Evening, Chief"
        app:layout_constraintBottom_toTopOf="@+id/sub_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="09.00"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/card_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sub_title" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        android:text="@string/keep_coding_and_stay_awesome"
        app:layout_constraintBottom_toTopOf="@+id/card_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/card_input"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">


        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/e_commerce"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solutions_for_your_needs"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/following_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/please_fill_in_the_following_data"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/et_nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/nama_lengkap"
            android:fontFamily="@font/poppins"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="#E6E7EE"/>

        <TextView
            android:id="@+id/nama_lengkap_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="24dp"/>

        <EditText
            android:id="@+id/et_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/nim"
            android:fontFamily="@font/poppins"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="#E6E7EE"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/et_nama_lengkap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/nim_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_jk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/poppins"
                android:text="@string/jenis_kelamin"
                android:textColor="#E6E7EE"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nim" />

            <Spinner
                android:id="@+id/spn_jenis_kel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tv_jk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_jenis_kel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>